Fri Aug 22 12:21:46 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/complex.rb: removed deprecated library.
	* lib/rational.rb: ditto.

Fri Aug 22 11:38:49 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/prettyprint.rb: removed PrettyPrint#first?
	  because it is obsoleted method since Ruby 1.8.2

Thu Aug 21 17:10:31 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (constat_attr): manage reverse video internally
	  since Windows console window does not manage it.  based on the
	  patch by white leaf in [ruby-dev:48483].  [Bug #10158]

Thu Aug 21 14:45:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/e2mmap.rb: removed commented-out code.

Thu Aug 21 13:23:34 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rinda/ring.rb: split executable code into sample directory.
	* sample/rinda-ring.rb: ditto.

Thu Aug 21 13:21:45 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/drb/acl.rb: split executable code into sample directory.
	* sample/drb/acl.rb: ditto.

Thu Aug 21 12:55:35 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .gitignore: ignored temporary file for Changelog.
	  http://mkosaki.blog46.fc2.com/blog-entry-1284.html

Thu Aug 21 12:40:22 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/imap.rb: split executable code into sample directory.
	* sample/net-imap.rb: ditto.

Thu Aug 21 12:23:56 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/imap.rb: removed commented-out code.

Wed Aug 20 17:27:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_TRY_CFLAGS, RUBY_TRY_LDFLAGS),
	  (RUBY_CHECK_BUILTIN_SETJMP, RUBY_SETJMP_TYPE),
	  (RUBY_STACK_GROW_DIRECTION): quote defun names, for some
	  versions of autoconf possibly.  [ruby-core:64473] [Bug #10156]

Tue Aug 19 22:28:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): fix condition to round.
	  [ruby-core:64454] [Bug #10151]
