@@ -92,7 +92,6 @@ class Shell
   include Error
   extend Exception2MessageMapper
 
-#  @cascade = true
   # debug: true -> normal debug
   # debug: 1    -> eval definition debug
   # debug: 2    -> detail inspect debug
@@ -108,7 +107,6 @@ class Shell
 
     attr_accessor :cascade, :debug, :verbose
 
-#    alias cascade? cascade
     alias debug? debug
     alias verbose? verbose
     @verbose = true
@@ -448,7 +446,6 @@ class Shell
         yield mes if iterator?
         if _head
           _head = false
-#         "shell" " + mes
           prefix + mes
         else
           " "* prefix.size + mes
