@@ -83,20 +83,6 @@ class Shell
     end
   end
 
-#   class Sort < Cat
-#     def initialize(sh, *filenames)
-#       super
-#     end
-#
-#     def each(rs = nil)
-#       ary = []
-#       super{|l|       ary.push l}
-#       for l in ary.sort!
-#       yield l
-#       end
-#     end
-#   end
-
   class AppendIO < BuiltInCommand
     def initialize(sh, io, filter)
       super sh
